opam-version: "2.0"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-webmachine"
dev-repo: "git+https://github.com/inhabitedtype/ocaml-webmachine.git"
bug-reports: "https://github.com/inhabitedtype/ocaml-webmachine/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "dune" {>= "3.0"}
  "webmachine"
  "async"
  "core"
  "cohttp-async"
  "lwt"
  "cohttp-lwt-unix"
  "ounit2" {with-test & >= "2.2"}
]
synopsis: "Webmachine examples"
